iSepta Train View.dcproj/project.wdgt/main.css
/* 
 This file was generated by Dashcode.  
 You may edit this file to customize your widget or web page 
 according to the license.txt file included in the project.
 */

body {
    margin: 0px;
}

#frontImg {
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    right: 0px;
    width: auto;
    bottom: 0px;
    height: auto;
    font-weight: bold;
    font-style: italic;
    font-family: 'Helvetica Neue';
    font-size: 10pt;
}

#info {
    position: absolute;
    right: 15px;
    bottom: 18px;
    width: 13px;
    height: 13px;
    top: auto;
    left: 249px;
}

#back {
    display: none;
}

#backImg {
    position: absolute;
    display: block;
    top: 0px;
    left: 0px;
    right: 0px;
    width: auto;
    bottom: 0px;
    height: auto;
}

#done {
    position: absolute;
    right: 21px;
    bottom: 21px;
    margin-left: auto;
    margin-top: auto;
}

#list {
    overflow: hidden;
    display: none;
    padding: 0px;
    -khtml-margin-top-collapse: separate;
    -khtml-margin-bottom-collapse: separate;
    margin-top: 25px;
    margin-left: 25px;
    z-index: 100;
}

.listRowTemplate_template {
    position: relative;
    list-style-type: none;
    overflow: hidden;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    padding: 0px;
    border-top-width: 0px;
    border-right-width: 0px;
    border-bottom-width: 1px;
    border-left-width: 0px;
    border-color: rgb(224, 224, 224);
    -webkit-border-top-left-radius: 0px 0px;
    -webkit-border-top-right-radius: 0px 0px;
    -webkit-border-bottom-left-radius: 0px 0px;
    -webkit-border-bottom-right-radius: 0px 0px;
    opacity: 1;
    color: rgb(255, 255, 255);
    margin-right: 0px;
    width: auto;
    min-height: 24px;
    height: auto;
}

.label_template {
    font-family: 'Helvetica Neue';
    font-weight: bold;
    font-size: 13px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    color: rgb(255, 255, 255);
    margin-top: 4px;
    margin-left: 10px;
    -khtml-margin-top-collapse: separate;
    -khtml-margin-bottom-collapse: separate;
    position: relative;
    width: auto;
    margin-right: 10px;
    min-height: 17px;
    height: auto;
}

#front {
    margin-left: 0px;
    margin-right: 0px;
    width: auto;
    min-height: 0px;
    height: auto;
}

#iSeptaUrlLabel {
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    color: rgb(238, 238, 238);
    font-family: 'Helvetica Neue';
    font-size: 9pt;
    left: 26px;
    top: 23px;
    right: 30px;
    width: auto;
    bottom: 123px;
    height: auto;
}

#iSeptaUrl {
    position: absolute;
    color: black;
    font-family: HelveticaNeue;
    font-size: 10pt;
    width: 221px;
    left: 26px;
    top: 54px;
}

#nextTrainLabel {
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    font-weight: bold;
    font-family: 'Helvetica Neue';
    top: 100px;
    right: 30px;
    width: auto;
    height: auto;
    font-size: 34pt;
    text-align: right;
    z-index: 200;
    color: rgba(238, 238, 238, 0.160156);
}

#iSeptaLabel {
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    color: rgb(238, 238, 238);
    text-shadow: rgb(68, 68, 68) 0px 2px 10px;
    font-size: 18pt;
    font-weight: bold;
    font-family: 'Helvetica Neue';
    text-overflow: ellipsis;
    left: 26px;
    top: 109px;
    right: 180px;
    width: auto;
    bottom: 41px;
    height: auto;
}

#poweredByLabel {
    font-family: HelveticaNeue;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    color: rgb(238, 238, 238);
    font-size: 9pt;
    left: 26px;
    top: 97px;
    right: 191px;
    width: auto;
    bottom: 69px;
    height: auto;
}

#error {
    display: none;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    left: 32px;
    font-weight: bold;
    font-style: italic;
    font-family: 'Helvetica Neue';
    top: 25px;
    right: 45px;
    width: auto;
    height: auto;
    color: rgb(255, 255, 255);
    text-shadow: rgb(0, 0, 0) 1px 1px 3px;
    font-size: 15px;
}

#text {
    font-family: HelveticaNeue;
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    left: 26px;
    color: rgb(255, 255, 255);
    font-size: 8pt;
    top: 141px;
    right: 140px;
    width: auto;
    bottom: 27px;
    height: auto;
}

#iSeptaUrlLabel1 {
    text-overflow: ellipsis;
    overflow: hidden;
    position: absolute;
    margin-top: 0px;
    color: rgb(238, 238, 238);
    font-family: 'Helvetica Neue';
    font-size: 9pt;
    left: 109px;
    top: 82px;
    right: 21px;
    width: auto;
    bottom: 80px;
    height: auto;
}

#trainName {
    position: absolute;
    color: black;
    font-family: HelveticaNeue;
    font-size: 10pt;
    top: 100px;
    width: 105px;
    left: 142px;
}

